--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -23,7 +23,7 @@
 
     @include mobile {
       // display: none;
-      bottom: 60px;
+      bottom: 50px;
     }
   }
 }
@@ -42,10 +42,11 @@
     gap: 40px;
 
     @include mobile {
-      height: 50%;
+      height: 60%;
       width: 100%;
-      gap: 20px;
+      gap: 30px;
       align-items: center;
+      justify-content: end;
       text-align: center;
       margin-top: 10em;
     }
@@ -56,7 +57,7 @@
       letter-spacing: 10px;
 
       @include mobile {
-        font-size: 20px;
+        font-size: 24px;
         letter-spacing: 8.5px;
       }
     }
@@ -65,7 +66,7 @@
       font-size: 65px;
 
       @include mobile {
-        font-size: 40px;
+        font-size: 58px;
       }
     }
 
@@ -80,6 +81,10 @@
         cursor: pointer;
         font-weight: 700;
         transition: 0.5s;
+
+        @include mobile {
+          font-size: 17px;
+        }
       }
       .cont {
         background: white;
@@ -111,24 +116,23 @@
   right: 0;
 
   @include mobile {
-    // height: 100%;
-    height: 70%;
+    height: 65%;
+    // height: 60%;
     width: 100%;
     position: unset;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    // margin-top: -28.3em;
-    margin-top: -35em;
+    margin-top: -43em;
   }
 
   img {
     width: 25em;
 
     @include mobile {
-      width: 33%;
-      height: 25%;
+      width: 50%;
+      height: 35%;
       object-fit: cover;
       border-radius: 100em;
     }
