--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -75,8 +75,9 @@
 
   @include mobile {
     font-size: 0.6em;
-    padding-left: 1.4em;
-    padding-right: 1.4em;
+    width: 22%;
+    height: 100%;
+    padding: 0.6em;
   }
 }
 .row-2 h6 {
