--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,12 @@ html {
   scroll-behavior: smooth;
 }
 
+@media (max-width: 738px) {
+  html {
+    scroll-snap-type: none;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
