--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -44,11 +44,12 @@
     @include mobile {
       height: 60%;
       width: 100%;
-      gap: 25px;
+      gap: 30px;
       align-items: center;
-      justify-content: end;
-      text-align: center;
-      margin-top: 10em;
+      justify-content: start;
+      text-align: start;
+      padding-left: 25px;
+      margin-top: 5em;
     }
 
     .mob-img {
@@ -57,7 +58,7 @@
       display: none;
 
       @include mobile {
-        display: flex;
+        display: none;
         object-fit: cover;
         border-radius: 100em;
       }
@@ -70,7 +71,6 @@
 
       @include mobile {
         font-size: 24px;
-        letter-spacing: 8.5px;
       }
     }
 
@@ -78,11 +78,16 @@
       font-size: 65px;
 
       @include mobile {
-        font-size: 58px;
+        font-size: 45px;
       }
     }
 
     .buttons {
+      @include mobile {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+      }
       button {
         padding: 20px;
         border: 1px solid white;
@@ -95,8 +100,9 @@
         transition: 0.5s;
 
         @include mobile {
-          font-size: 16px;
-          padding: 16px;
+          font-size: 14px;
+          border-radius: 50em;
+          margin-top: 1em;
         }
       }
       .cont {
