--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,55 +1,78 @@
 @import "../../app.scss";
 
 .contact {
-  height: 100%;
-  max-width: 1100px;
-  margin: auto;
+  min-height: 100vh;
   display: flex;
   align-items: center;
-  gap: 40px;
+  justify-content: center;
+  padding: 60px 20px;
+  background-color: #0c0c1d;
+  max-width: 1100px;
+  margin: 0 auto;
 
   @include mobile {
-    width: 100%;
+    padding: 40px 15px;
     flex-direction: column;
-    gap: 10px;
   }
 
   .textContainer {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    margin-bottom: 2em;
+    gap: 40px;
+    padding-right: 40px;
+    margin-top: -4em;
 
     @include mobile {
-      gap: 20px;
-      text-align: center;
+      padding-right: 0;
+      gap: 30px;
+      margin-bottom: 40px;
       align-items: center;
-      margin-bottom: 0;
-      margin-top: 3em;
-      flex: 0.8;
+      text-align: center;
+      margin-top: unset;
     }
 
     h1 {
-      font-size: 75px;
-      line-height: 70px;
+      font-size: 48px;
+      font-weight: 500;
+      color: white;
+      line-height: 1.2;
 
       @include mobile {
         font-size: 36px;
-        height: 65px;
       }
     }
 
-    h2 {
-      @include mobile {
-        font-size: 26px;
-      }
-    }
+    .items {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      width: 100%;
 
-    span {
-      font-weight: 300;
-      @include mobile {
-        font-size: 20px;
+      .item {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        h2 {
+          font-size: 20px;
+          font-weight: 400;
+          color: rebeccapurple;
+
+          @include mobile {
+            font-size: 18px;
+          }
+        }
+
+        span {
+          font-size: 16px;
+          font-weight: 300;
+          color: lightgray;
+
+          @include mobile {
+            font-size: 14px;
+          }
+        }
       }
     }
   }
@@ -57,69 +80,110 @@
   .formContainer {
     flex: 1;
     position: relative;
+    display: flex;
+    justify-content: center;
+    min-height: 350px;
 
     @include mobile {
-      padding: 10px;
-      width: 95%;
+      width: 100%;
     }
 
     .phoneSvg {
-      stroke: orange;
       position: absolute;
-      align-self: center;
-      justify-self: center;
-      top: 2.5em;
-      right: 12em;
-      margin: auto;
-      z-index: -1;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      width: 250px;
+      height: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
       @include mobile {
-        top: 0.5em;
-        right: 2.8em;
+        width: 200px;
+        height: 200px;
+      }
+
+      svg {
+        display: block;
+        width: 100%;
+        height: 100%;
       }
     }
 
     form {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 20px;
+      width: 100%;
+      max-width: 500px;
+      position: relative;
+      z-index: 2;
 
       input,
       textarea {
-        padding: 20px;
-        background-color: transparent;
-        border: 1px solid white;
-        color: white;
+        padding: 15px;
+        border: 1px solid rgba(128, 128, 128, 0.5);
         border-radius: 5px;
+        background-color: rgba(26, 26, 46, 0.8);
+        color: white;
+        font-size: 16px;
+        font-family: "Kumbh Sans", sans-serif;
+        transition: border-color 0.3s ease;
+
+        &:focus {
+          outline: none;
+          border-color: orange;
+        }
+
+        &::placeholder {
+          color: gray;
+        }
 
         @include mobile {
-          padding: 10px;
+          padding: 12px;
+          font-size: 14px;
         }
+      }
+
+      textarea {
+        resize: none;
       }
 
       button {
         padding: 15px;
         border: none;
+        border-radius: 5px;
         background-color: orange;
-        cursor: pointer;
+        color: white;
+        font-size: 16px;
         font-weight: 500;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+
+        &:hover {
+          background-color: rebeccapurple;
+        }
 
         @include mobile {
-          padding: 10px;
+          padding: 12px;
+          font-size: 14px;
         }
       }
 
-      .email {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: rgb(78, 221, 78);
-      }
-      .error {
-        color: red;
+      .status {
+        text-align: center;
+        min-height: 20px;
+
+        .error {
+          color: #ff4444;
+          font-size: 14px;
+        }
 
         .success {
-          display: none;
+          color: #44ff44;
+          font-size: 14px;
         }
       }
     }
