--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -6,9 +6,25 @@
   background: linear-gradient(180deg, #0c0c1d, #111132);
   position: relative;
   z-index: 10;
+  min-height: 100vh;
 
   @include mobile {
-    height: 100%;
+    height: auto;
+    min-height: 100vh;
+  }
+
+  .wrapper {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+
+    @include mobile {
+      flex-direction: column;
+      padding: 20px;
+    }
   }
 
   .slidingTextContainer {
@@ -17,144 +33,149 @@
     bottom: -10px;
     white-space: nowrap;
     color: #ffffff09;
-    width: 50%;
+    width: 100%;
     font-weight: bold;
     z-index: -10;
 
     @include mobile {
-      // display: none;
-      bottom: 50px;
+      font-size: 20vh;
+      bottom: 0;
     }
   }
-}
-
-.wrapper {
-  max-width: 1100px;
-  height: 100%;
-  margin: auto;
 
   .textContainer {
-    width: 60%;
-    height: 100%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 40px;
+    gap: 30px;
+    padding: 20px;
+    margin-top: 4em;
 
     @include mobile {
-      height: 60%;
       width: 100%;
-      gap: 30px;
       align-items: center;
-      justify-content: start;
-      text-align: start;
-      padding-left: 25px;
-      margin-top: 5em;
+      text-align: center;
+      padding-top: 60px;
+      gap: 20px;
+      margin-top: 0
     }
 
     .mob-img {
-      width: 50%;
-      height: 36%;
       display: none;
-
+      
       @include mobile {
-        display: none;
+        display: block;
+        width: 200px;
+        height: 200px;
         object-fit: cover;
-        border-radius: 100em;
+        border-radius: 50%;
+        margin-bottom: 20px;
       }
     }
 
     h2 {
-      font-size: 21px;
+      font-size: 24px;
       color: rebeccapurple;
-      letter-spacing: 10px;
+      letter-spacing: 8px;
+      font-weight: 500;
 
       @include mobile {
-        font-size: 24px;
+        font-size: 20px;
+        letter-spacing: 5px;
       }
     }
 
     h1 {
-      font-size: 65px;
+      font-size: 60px;
+      line-height: 1.1;
+      color: white;
 
       @include mobile {
-        font-size: 45px;
+        font-size: 40px;
       }
     }
 
     .buttons {
+      display: flex;
+      gap: 20px;
+
       @include mobile {
-        display: flex;
-        flex-direction: row;
+        flex-direction: column;
         width: 100%;
+        max-width: 300px;
+        margin: 0 auto;
+        gap: 25px;
       }
+
       button {
-        padding: 20px;
+        padding: 15px 30px;
         border: 1px solid white;
-        border-radius: 10px;
+        border-radius: 5px;
         background-color: transparent;
         color: white;
-        margin-right: 20px;
         cursor: pointer;
-        font-weight: 700;
-        transition: 0.5s;
+        font-weight: 600;
+        font-size: 16px;
+        transition: all 0.3s ease;
 
         @include mobile {
-          font-size: 14px;
-          border-radius: 50em;
-          margin-top: 1em;
+          width: 100%;
+          padding: 15px;
+          font-size: 16px;
+        }
+
+        &:hover {
+          background: rebeccapurple;
+          border-color: rebeccapurple;
+        }
+
+        &.cont {
+          background: white;
+          color: black;
+          
+          &:hover {
+            background: rebeccapurple;
+            color: white;
+          }
         }
       }
-      .cont {
-        background: white;
-        color: black;
-      }
-    }
-    .cont:hover {
-      background: rebeccapurple;
-      border: none;
-      color: white;
-    }
-    .latest:hover {
-      background: rebeccapurple;
-      border: none;
-      color: white;
     }
 
     img {
-      width: 50px;
+      width: 40px;
+      margin-top: 20px;
+      
+      @include mobile {
+        width: 30px;
+      }
     }
   }
-}
 
-.imageContainer {
-  width: 39.6%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-
-  @include mobile {
-    height: 65%;
-    // height: 60%;
-    width: 100%;
-    position: unset;
+  .imageContainer {
+    width: 27%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: start;
     align-items: center;
-    margin-top: -41em;
-    display: none;
-  }
-
-  img {
-    width: 25em;
+    justify-content: center;
 
     @include mobile {
-      width: 50%;
-      height: 36%;
-      object-fit: cover;
-      border-radius: 100em;
+      width: 100%;
+      height: auto;
+      padding: 20px 0;
+      display: none;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+
+      @include mobile {
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+      }
     }
   }
 }
