--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -58,12 +58,12 @@
       text-align: center;
       padding-top: 60px;
       gap: 20px;
-      margin-top: 0
+      margin-top: 0;
     }
 
     .mob-img {
       display: none;
-      
+
       @include mobile {
         display: block;
         width: 200px;
@@ -133,7 +133,7 @@
         &.cont {
           background: white;
           color: black;
-          
+
           &:hover {
             background: rebeccapurple;
             color: white;
@@ -145,7 +145,7 @@
     img {
       width: 40px;
       margin-top: 20px;
-      
+
       @include mobile {
         width: 30px;
       }
