--- a/src/app.scss
+++ b/src/app.scss
@@ -32,7 +32,7 @@ section {
   scroll-snap-align: center;
 }
 
-#About, #Projects, #Contact {
+#About, #Projects, #Services, #Contact1 {
   height: 100vh;
 }
 
