--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -60,6 +60,7 @@
 
           @include mobile {
             font-size: 18px;
+            width: 80%;
           }
         }
 
@@ -74,6 +75,10 @@
           @include mobile {
             font-size: 10px;
             padding: 4px 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 8em;
           }
         }
       }
