--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -12,6 +12,8 @@
 
   h1 {
     font-size: 70px;
+    color: white;
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); // Subtle shadow for readability
 
     @include mobile {
       font-size: 55px;
@@ -35,7 +37,6 @@
   }
 
   .planets {
-    background-image: url("/planets.png");
     background-size: cover;
     background-position: bottom;
     width: 100%;
