feat: fixed assets

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -37,7 +37,7 @@
       img {
         width: 18px;
         height: 18px;
-        transition: 0.5s;
+        transition: 0.5s all ease-in-out;
       }
 
       img:hover {
