--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -40,8 +40,10 @@
         transition: 0.5s all ease-in-out;
       }
 
-      img:hover {
-        transform: scale(1.2);
+      @media (hover: hover) {
+        img:hover {
+          transform: scale(1.2);
+        }
       }
     }
   }
